--- a/simulation/README
+++ b/simulation/README
@@ -1,4 +1,4 @@
-## Simulation studies
-==============================
+Simulation studies
+================
 
 To replicate the simulation analysis, run the script
